--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 div {
-    border: 5px solid teal;
+    border: 5px solid rgb(128, 0, 109);
     margin: 1em;
     text-align: center;
 }
 
+.player, .dealer, .button {
+    flex: auto;
+}
+
 body {
-    
+    background-color: #35654d ;
 }
 
 .container {
-    height: 500px;
+    height: 95vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    
 }
