--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ div {
 
 .dealer-cards, .deck-cards, .player-cards {
     width: 90%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body {
