--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-div {
+/* div {
     border: 2px solid rgb(0, 0, 0);
-    margin: 1em;
+    margin: auto;
     text-align: center;
-}
+} */
 
 .button-div {
-    width: 90vh;
+    min-width: 100%;
     max-height: 5vh;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .card-container {
@@ -16,7 +18,7 @@ div {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width: 90vh;
+    width: 100vh;
     height: 90vh;
 }
 
@@ -39,8 +41,14 @@ body {
 
 .player-text, .dealer-text {
     position: absolute;
-    top: 4px;
-    left: 42%;
+    top: 0px;
+    text-align: center;
+    color: wheat;
+}
+
+.deal, .hit, .stand, .newround {
+    padding-left: 3em;
+    padding-right: 3em;
 }
 
 
