--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 div {
-    border: 2px solid rgb(0, 0, 0);
+    /* border: 2px solid rgb(0, 0, 0); */
     margin: auto;
 }
 
@@ -29,7 +29,7 @@ div {
 
 .dealer-cards, .player-cards {
     position: relative;
-    width: 80%;
+    width: 90%;
     height: 30%;
     display: flex;
     align-items: center;
@@ -42,7 +42,6 @@ div {
 .player-cards{
     margin-top: 0em;
 }
-
 
 body {
     background-color: #35654d ;
@@ -87,11 +86,22 @@ body {
 
 
 .bet-div {
-    min-width: 30%;
-    max-height: 5vh;
+    min-width: 40%;
+    max-height: fit-content;
     display: flex;
+    grid-template-columns: max-content max-content;
+    grid-gap:5px;
     justify-content: center;
     margin-bottom: 0em;
+    color: wheat;
+}
+
+.form-div {
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .outcome-text {
@@ -103,4 +113,8 @@ body {
 .dealer-text, .player-text {
     width: fit-content;
     color: wheat;
+}
+
+input[type='number']{
+    width: 80px;
 }
