added fade-in & fade-out styling and source

--- a/style.css
+++ b/style.css
@@ -129,3 +129,24 @@ input[type='number']{
     color: wheat;
     top: 12%;
 }
+
+/* From Stackoverflow: https://stackoverflow.com/questions/43720936/how-to-create-blinking-text-with-css-only */
+#alert {
+
+    animation: opacity 2s ease-in-out infinite;
+    opacity: 1;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
