--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,24 @@
-div {
-    margin: auto;
+@import "btnConfig";
+@import "utilities";
+@import "config";
+
+// * {
+//     box-sizing: border-box;
+//     margin: 0;
+//     padding: 0;
+// }
+
+body {
+    background-color: $primary-color;
+    font-family: $font-stack;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    div {
+        margin: auto;
+    }
 }
 
 .btn-div {
@@ -48,7 +67,7 @@ body {
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-} */
+}
 
 .deal, .hit, .stand, .newround {
     padding-left: 3em;
