--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,44 @@
   margin-top: 1em;
 }
 
+#submit-alert, #zero-alert {
+  position: absolute;
+  color: #E0CBA8;
+}
+
+/* From Stackoverflow: https://stackoverflow.com/questions/43720936/how-to-create-blinking-text-with-css-only */
+#submit-alert, #zero-alert {
+  top: 10%;
+  -webkit-animation: opacity 2s ease-in-out infinite;
+          animation: opacity 2s ease-in-out infinite;
+  opacity: 1;
+}
+
+@-webkit-keyframes opacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 body {
   background-color: #35654d;
-  font-family: Trebuchet MS, Arial, sans-serif;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -47,15 +82,6 @@ body {
 }
 body div {
   margin: auto;
-}
-
-.btn-div {
-  min-width: 100%;
-  max-height: 5vh;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1em;
-  margin-top: 1em;
 }
 
 .card-container {
@@ -116,7 +142,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  color: wheat;
+  color: #E0CBA8;
 }
 
 .player-total, .player-currency, .player-bet {
@@ -141,7 +167,7 @@ body {
   grid-gap: 5px;
   justify-content: center;
   margin-bottom: 0em;
-  color: wheat;
+  color: #E0CBA8;
 }
 
 #form, #betform {
@@ -154,7 +180,7 @@ body {
 
 .outcome-text {
   font-weight: bold;
-  color: wheat;
+  color: #E0CBA8;
   text-align: center;
 }
 
@@ -162,51 +188,5 @@ body {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  color: wheat;
-}
-
-input[type=number] {
-  width: 80px;
-}
-
-#alert {
-  position: absolute;
-  color: wheat;
-}
-
-#zero-alert {
-  position: absolute;
-  color: wheat;
-  top: 12%;
-}
-
-/* From Stackoverflow: https://stackoverflow.com/questions/43720936/how-to-create-blinking-text-with-css-only */
-#alert, #zero-alert {
-  -webkit-animation: opacity 2s ease-in-out infinite;
-          animation: opacity 2s ease-in-out infinite;
-  opacity: 1;
-}
-
-@-webkit-keyframes opacity {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
-  }
+  color: #E0CBA8;
 }/*# sourceMappingURL=style.css.map */
