--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$font-stack: Trebuchet MS, Arial, sans-serif;
-$text-color: #E0CBA8;
+$primary-text-color: #E0CBA8;
 $primary-color: #35654d;
 $secondary-color: #0D1F2D;
+$alert-font-size: 18px;
