--- a/scss/_alertconfig.scss
+++ b/scss/_alertconfig.scss
@@ -12,6 +12,12 @@
     top: 10%;
     animation: opacity 2s ease-in-out infinite;
     opacity: 1;
+    font-weight: bold;
+    font-size: $alert-font-size;
+}
+
+#submit-alert {
+    @include set-font-color($alert-text-color);
 }
 
 
