--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,8 @@
 $primary-text-color: #E0CBA8;
+$alert-text-color: #201E50;
+$outcome-text-color:#DD7373;
+$player-text-color: #0D1F2D;
+$dealer-text-color: #B9A44C;
 $primary-color: #35654d;
 $secondary-color: #0D1F2D;
-$alert-font-size: 18px;
+$alert-font-size: 20px;
