--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -12,11 +12,7 @@
     background-color: $color;
     color: text-color-picker($color)
   }
-  
-//   Standard CSS
-//   .box {
-//     max-width: 1100px;
-//     padding: 0 30px;
-//     margin: 0 auto;
-//     overflow: auto;
-//   }
+
+  @mixin set-font-color($color) {
+    color: $color;
+  }
