--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 .btn-new:hover, .btn-stand:hover, .btn-hit:hover, .btn-deal:hover {
   transform: scale(0.8);
 }
+.btn-new:focus, .btn-stand:focus, .btn-hit:focus, .btn-deal:focus {
+  background-color: #0D1F2D;
+}
 
 .btn-deal {
   background-color: #ddebf5;
@@ -37,13 +40,8 @@
   margin-top: 1em;
 }
 
-#submit-alert, #zero-alert {
+#zero-alert, #submit-alert {
   position: absolute;
-  color: #E0CBA8;
-}
-
-/* From Stackoverflow: https://stackoverflow.com/questions/43720936/how-to-create-blinking-text-with-css-only */
-#submit-alert, #zero-alert {
   top: 10%;
   -webkit-animation: opacity 2s ease-in-out infinite;
           animation: opacity 2s ease-in-out infinite;
@@ -52,8 +50,13 @@
   font-size: 20px;
 }
 
+/* From Stackoverflow: https://stackoverflow.com/questions/43720936/how-to-create-blinking-text-with-css-only */
 #submit-alert {
   color: #201E50;
+}
+
+#zero-alert {
+  color: #DD7373;
 }
 
 @-webkit-keyframes opacity {
@@ -164,21 +167,18 @@ body {
 }
 
 .bet-div {
-  min-width: 40%;
+  min-width: 30%;
   max-height: -webkit-fit-content;
   max-height: -moz-fit-content;
   max-height: fit-content;
   display: flex;
-  grid-template-columns: -webkit-max-content -webkit-max-content;
-  grid-template-columns: max-content max-content;
-  grid-gap: 5px;
   justify-content: center;
   margin-bottom: 0em;
-  color: #E0CBA8;
+  color: #ddebf5;
 }
 
 #form, #betform {
-  width: 85%;
+  width: 65%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
