--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,4 +6,5 @@ $dealer-text-color: #B9A44C;
 $primary-color: #35654d;
 $secondary-color: #0D1F2D;
 $alert-font-size: 20px;
-$button-focus-color: #0D1F2D;
+$button-focus-color: #37424b;
+$bet-focus-color: #f8fa76;
