--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,10 +6,7 @@
 
 body {
     background-color: $primary-color;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    @include flex-row-wrap();
 
     div {
         margin: auto;
@@ -17,27 +14,20 @@ body {
 }
 
 .card-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    @include flex-row-wrap();
     width: 100vh;
     height: 90vh;
 }
 
 .deck-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-row-wrap();
 }
 
 .dealer-cards, .player-cards {
     position: relative;
     width: 90%;
     height: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-justify-items();
 }
 
 .dealer-cards{
@@ -47,13 +37,6 @@ body {
     margin-top: 0em;
 }
 
-body {
-    background-color: $primary-color ;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
 
 .deal, .hit, .stand, .newround {
     padding-left: 3em;
@@ -64,23 +47,18 @@ body {
     position: relative;
     width: 23%;
     height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-justify-items();
 }
 
  .player-details {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    @include flex-row-wrap();
     color: $primary-text-color;
 } 
 
 .player-total, .player-currency, .player-bet {
-    display: flex;
-    width: 80%;
+    width: 70%;
     height: 20%;
-    justify-content: end;
+    @include flex-justify();
     @include set-font-color(lighten($player-text-color, 80%));
 }
 
@@ -92,19 +70,23 @@ body {
 
 .bet-div {
     min-width: 30%;
-    max-height: fit-content;
-    display: flex;
-    justify-content: center;
+    @include flex-justify();
     margin-bottom: 0em;
     @include set-font-color(lighten($player-text-color, 80%));
 }
 
 #form, #betform {
     width: 65%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    @include flex-row-wrap();
     justify-content: space-evenly;
+    
+    input {
+        width: 80px;
+
+        &:focus{
+            background-color: $bet-focus-color; 
+        }
+    }
 }
 
 .outcome-text {
