--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,8 @@ body div {
 }
 
 .player-total, .player-currency, .player-bet {
-  width: 70%;
-  height: 20%;
+  width: 8em;
+  height: 2em;
   display: flex;
   justify-content: center;
   color: #ddebf5;
