--- a/scss/_btnconfig.scss
+++ b/scss/_btnconfig.scss
@@ -7,6 +7,8 @@
   border-radius: 5px;
   padding: 5px 10px;
   margin: 3px;
+  padding-left: 3em;
+  padding-right: 3em;
 
   &:hover {
     transform: scale(.80);
