cleaning up style.scss and making code more DRY

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -34,3 +34,17 @@
     justify-content: center;
     align-items: center;
   }
+
+  @mixin player-values() {
+    width: 8em;
+    height: 2em;
+    @include flex-justify();
+    @include set-font-color(lighten($player-text-color, 80%));
+  }
+
+  @mixin dealer-player-cards() {
+    position: relative;
+    width: 90%;
+    height: 30%;
+    @include flex-justify-items();
+  }
