--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ h4 {
   margin-top: 0em;
 }
 
-.outcome, .player-details {
+.outcome {
   position: relative;
   width: 23%;
   height: 20%;
@@ -146,6 +146,9 @@ h4 {
 }
 
 .player-details {
+  position: relative;
+  width: 23%;
+  height: 20%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -193,14 +196,7 @@ h4 {
   text-align: center;
 }
 
-.player-text {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  color: #E0CBA8;
-}
-
-.dealer-text {
+.player-text, .dealer-text {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
